--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "r/GTAV_Cruises Extension",
-  "description": "Adds the Events Widget to Chrome's toolbar and shows notifications for events 30 & 15 minutes before they start.",
-  "version": "1.0.5",
+  "description": "Adds the Events Widget to Chrome's toolbar and shows notifications for events 30 & 15 minutes before they start as well as for new events.",
+  "version": "1.1.0",
   "browser_action": {
     "default_icon": "img/logo.png",
     "default_popup": "popup.html"
