--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "PCCruises Events Extension",
-  "description": "Adds the Events Widget to Chrome's toolbar and shows desktop notifications for events 30 & 15 minutes before they start as well as for new events.",
+  "description": "Adds the PCCruises Events Widget to Chrome's toolbar and shows notifications for new events and events starting in 30 & 15 minutes.",
   "version": "1.1.0",
   "browser_action": {
     "default_icon": "img/logo.png",
